--- a/deep-learning-with-python-by-francois-chollet/11-deep-learning-for-text/01_words_representing_approach_sets_and_sequences.ipynb
+++ b/deep-learning-with-python-by-francois-chollet/11-deep-learning-for-text/01_words_representing_approach_sets_and_sequences.ipynb
@@ -6,7 +6,7 @@
       "name": "01-words-representing-approach--sets-and-sequences.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMD2WnClHW22EAlbuLXI1Uo",
+      "authorship_tag": "ABX9TyNFCbAzlF9MQCS9oG4L0X05",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -89,7 +89,7 @@
       "metadata": {
         "id": "qqyixaVcLwJ_"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -115,12 +115,12 @@
       ],
       "metadata": {
         "id": "qikpFafHMZRp",
-        "outputId": "d70f8226-ecc4-47f8-fac0-d00c6557ae08",
+        "outputId": "56d6ea94-347c-439a-e39a-bd6b4ce58374",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -128,7 +128,7 @@
           "text": [
             "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
             "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-            "100 80.2M  100 80.2M    0     0  20.7M      0  0:00:03  0:00:03 --:--:-- 20.7M\n"
+            "100 80.2M  100 80.2M    0     0  15.6M      0  0:00:05  0:00:05 --:--:-- 19.5M\n"
           ]
         },
         {
@@ -151,12 +151,12 @@
       ],
       "metadata": {
         "id": "1P--z8OhM6ub",
-        "outputId": "98667932-95d6-4949-943f-9de6740b23c2",
+        "outputId": "3ef2dcf0-e53c-40dd-d6a8-cb608c57d2bb",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -214,7 +214,7 @@
       "metadata": {
         "id": "YMuEAvy2OQRY"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -240,12 +240,12 @@
       ],
       "metadata": {
         "id": "V6vA9z3ASbd3",
-        "outputId": "a16525f3-1b40-4ab0-fcdf-02a2ecff6efb",
+        "outputId": "55b25e56-2e57-4eb0-bdf8-5ea999dabc22",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -281,12 +281,12 @@
       ],
       "metadata": {
         "id": "nwyYSSmCTHml",
-        "outputId": "853345ed-8035-44cd-92da-bda533480407",
+        "outputId": "38c3eb72-392e-4801-9627-1f5f1e8a20cc",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -296,8 +296,8 @@
             "inputs.dtype: <dtype: 'string'>\n",
             "targets.shape: (32,)\n",
             "targets.dtype: <dtype: 'int32'>\n",
-            "inputs[0]: tf.Tensor(b\"This movie has beautiful scenery. Unfortunately it has no plot. In order to have a plot there must be a conflict. This movie had none. It spent two hours painting a beautiful scene and failed to ever place any activity in it. The picture tries to be artistic but fails to pay attentions to the fundamentals of story telling.<br /><br />If you love Montana scenery and fly fishing you will find some value in this film just don't expect a story. There isn't one.\", shape=(), dtype=string)\n",
-            "targets[0]: tf.Tensor(0, shape=(), dtype=int32)\n"
+            "inputs[0]: tf.Tensor(b\"... when this movie so well proves that they indeed are unnecessary.<br /><br />Although few lines, it was kind of weird to see this movie, no subs, in a language unknown. A friend of mine sent a VHS, included a few pieces of papers with all lines translated to English. with her translation next to me, I began watching this tale (it is indeed a tale), and from the very first tunes of the whistling melody during opening credits I was stuck. the colours, that minimal acting (well, in most cases), absurd comedy, slapstick, thoughtful, beautiful... along with a few other movies (Paris, Texas and Nenette et Boni), this one is able to speak to anyone's heart - without words. Whenever you get the chance, see it. Whatever you do - don't miss it. It's a once in a lifetime experience. Oh, acting is great, the soundtrack is brilliant, the story is simple and told a thousand times before - but rarely (never?) like this.\", shape=(), dtype=string)\n",
+            "targets[0]: tf.Tensor(1, shape=(), dtype=int32)\n"
           ]
         }
       ]
@@ -1154,7 +1154,7 @@
       "metadata": {
         "id": "eKQRxZI9Qmk2"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -1314,15 +1314,288 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "It’s thus reasonable to learn a new embedding space with every new task. Fortunately,\n",
+        "backpropagation makes this easy, and Keras makes it even easier. It’s about\n",
+        "learning the weights of a layer: the Embedding layer."
+      ],
+      "metadata": {
+        "id": "vahJgczVc-L0"
+      }
+    },
+    {
       "cell_type": "code",
+      "source": [
+        "# One input is a sequence of integers\n",
+        "inputs = keras.Input(shape=(None, ), dtype=\"int64\")\n",
+        "# The Embedding layer takes at least two arguments: the number of possible tokens and the dimensionality of the embeddings (here, 256).\n",
+        "embedded = layers.Embedding(input_dim=max_tokens, output_dim=256)(inputs)\n",
+        "# add a bidirectional LSTM\n",
+        "x = layers.Bidirectional(layers.LSTM(32))(embedded)\n",
+        "x = layers.Dropout(0.5)(x)\n",
+        "outputs = layers.Dense(1, activation=\"sigmoid\")(x)\n",
+        "\n",
+        "model = keras.Model(inputs, outputs)\n",
+        "model.compile(optimizer=\"rmsprop\", loss=\"binary_crossentropy\", metrics=[\"accuracy\"])\n",
+        "model.summary()"
+      ],
+      "metadata": {
+        "id": "nLtl5qpwDvor",
+        "outputId": "d435a2f4-3ceb-46a3-bed5-231daca8cecf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Model: \"model\"\n",
+            "_________________________________________________________________\n",
+            " Layer (type)                Output Shape              Param #   \n",
+            "=================================================================\n",
+            " input_1 (InputLayer)        [(None, None)]            0         \n",
+            "                                                                 \n",
+            " embedding (Embedding)       (None, None, 256)         5120000   \n",
+            "                                                                 \n",
+            " bidirectional (Bidirectiona  (None, 64)               73984     \n",
+            " l)                                                              \n",
+            "                                                                 \n",
+            " dropout (Dropout)           (None, 64)                0         \n",
+            "                                                                 \n",
+            " dense (Dense)               (None, 1)                 65        \n",
+            "                                                                 \n",
+            "=================================================================\n",
+            "Total params: 5,194,049\n",
+            "Trainable params: 5,194,049\n",
+            "Non-trainable params: 0\n",
+            "_________________________________________________________________\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "callbacks = [keras.callbacks.ModelCheckpoint(\"embeddings_bidir_gru.keras\", save_best_only=True)]\n",
+        "\n",
+        "model.fit(int_train_ds, validation_data=int_val_ds, epochs=10, callbacks=callbacks)\n",
+        "\n",
+        "model = keras.model.load_model(\"embeddings_bidir_gru.keras\")\n",
+        "print(f\"Test accuracy: {model.evaluate(int_test_ds)[1]:.3f}\")"
+      ],
+      "metadata": {
+        "id": "e9Az8iMbdk5G"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "It trains much faster than the one-hot model (since the LSTM only has to process\n",
+        "256-dimensional vectors instead of 20,000-dimensional), and its test accuracy is comparable\n",
+        "(87%)."
+      ],
+      "metadata": {
+        "id": "Ni3AokZvd2ai"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Understading padding and masking"
+      ],
+      "metadata": {
+        "id": "mU2yaDRyd3E0"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "We need some way to tell the RNN that it should skip the iterations for padded value(mostly zeros). There’s an API for that: masking.\n",
+        "\n",
+        "The Embedding layer is capable of generating a “mask” that corresponds to its\n",
+        "input data. This mask is a tensor of ones and zeros (or True/False booleans), of shape\n",
+        "(`batch_size`, `sequence_length`), where the entry `mask[i, t]` indicates where timestep\n",
+        "t of sample i should be skipped or not (the timestep will be skipped if `mask[i, t]`\n",
+        "is 0 or False, and processed otherwise).\n",
+        "\n",
+        "By default, this option isn’t active—you can turn it on by passing mask_zero=True\n",
+        "to your Embedding layer. You can retrieve the mask with the compute_mask() method:"
+      ],
+      "metadata": {
+        "id": "Yrk--UfIeG3i"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "embedding_layer = layers.Embedding(input_dim=10, output_dim=256, mask_zero=True)"
+      ],
+      "metadata": {
+        "id": "RW3kzSybffDn"
+      },
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "some_input = [\n",
+        "   [4, 3, 2, 1, 0, 0, 0],\n",
+        "   [5, 4, 3, 2, 1, 0, 0],\n",
+        "   [2, 1, 0, 0, 0, 0, 0]           \n",
+        "]"
+      ],
+      "metadata": {
+        "id": "jZlH-b8chsPd"
+      },
+      "execution_count": 11,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "mask = embedding_layer.compute_mask(some_input)\n",
+        "mask"
+      ],
+      "metadata": {
+        "id": "-268znIUh0nY",
+        "outputId": "cc4a1085-98ab-4d12-ad77-1ff5c0e3c2e6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(3, 7), dtype=bool, numpy=\n",
+              "array([[ True,  True,  True,  True, False, False, False],\n",
+              "       [ True,  True,  True,  True,  True, False, False],\n",
+              "       [ True,  True, False, False, False, False, False]])>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "In practice, you will almost never have to manage masks by hand. Instead, Keras will\n",
+        "automatically pass on the mask to every layer that is able to process it (as a piece of\n",
+        "metadata attached to the sequence it represents). \n",
+        "\n",
+        "This mask will be used by RNN layers\n",
+        "to skip masked steps. If your model returns an entire sequence, the mask will also\n",
+        "be used by the loss function to skip masked steps in the output sequence."
+      ],
+      "metadata": {
+        "id": "tonR0N5BiUQz"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# One input is a sequence of integers\n",
+        "inputs = keras.Input(shape=(None, ), dtype=\"int64\")\n",
+        "embedded = layers.Embedding(input_dim=max_tokens, output_dim=256, mask_zero=True)(inputs)\n",
+        "# add a bidirectional LSTM\n",
+        "x = layers.Bidirectional(layers.LSTM(32))(embedded)\n",
+        "x = layers.Dropout(0.5)(x)\n",
+        "outputs = layers.Dense(1, activation=\"sigmoid\")(x)\n",
+        "\n",
+        "model = keras.Model(inputs, outputs)\n",
+        "model.compile(optimizer=\"rmsprop\", loss=\"binary_crossentropy\", metrics=[\"accuracy\"])\n",
+        "model.summary()"
+      ],
+      "metadata": {
+        "id": "mrxAX9XviU5s",
+        "outputId": "8dedc6af-b7e1-4dc5-9183-161d6975aa04",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Model: \"model_1\"\n",
+            "_________________________________________________________________\n",
+            " Layer (type)                Output Shape              Param #   \n",
+            "=================================================================\n",
+            " input_2 (InputLayer)        [(None, None)]            0         \n",
+            "                                                                 \n",
+            " embedding_2 (Embedding)     (None, None, 256)         5120000   \n",
+            "                                                                 \n",
+            " bidirectional_1 (Bidirectio  (None, 64)               73984     \n",
+            " nal)                                                            \n",
+            "                                                                 \n",
+            " dropout_1 (Dropout)         (None, 64)                0         \n",
+            "                                                                 \n",
+            " dense_1 (Dense)             (None, 1)                 65        \n",
+            "                                                                 \n",
+            "=================================================================\n",
+            "Total params: 5,194,049\n",
+            "Trainable params: 5,194,049\n",
+            "Non-trainable params: 0\n",
+            "_________________________________________________________________\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "callbacks = [keras.callbacks.ModelCheckpoint(\"embeddings_bidir_gru_with_masking.keras\", save_best_only=True)]\n",
+        "\n",
+        "model.fit(int_train_ds, validation_data=int_val_ds, epochs=10, callbacks=callbacks)\n",
+        "\n",
+        "model = keras.model.load_model(\"embeddings_bidir_gru_with_masking.keras\")\n",
+        "print(f\"Test accuracy: {model.evaluate(int_test_ds)[1]:.3f}\")"
+      ],
+      "metadata": {
+        "id": "JbS_FVcfinWV"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "This time we get to 88% test accuracy—a small but noticeable improvement."
+      ],
+      "metadata": {
+        "id": "pgSObbNLitu4"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Using pretrained word-embeddings"
+      ],
+      "metadata": {
+        "id": "0cLL97BgiuKJ"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "source": [
         ""
       ],
       "metadata": {
-        "id": "nLtl5qpwDvor"
-      },
-      "execution_count": null,
-      "outputs": []
+        "id": "yzgkRUEpi2lm"
+      }
     }
   ]
 }
