--- a/deep-learning-with-python-by-francois-chollet/11-deep-learning-for-text/01_words_representing_approach_sets_and_sequences.ipynb
+++ b/deep-learning-with-python-by-francois-chollet/11-deep-learning-for-text/01_words_representing_approach_sets_and_sequences.ipynb
@@ -6,7 +6,7 @@
       "name": "01-words-representing-approach--sets-and-sequences.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNFCbAzlF9MQCS9oG4L0X05",
+      "authorship_tag": "ABX9TyMvTgRxxN6SBQCSF+Cm6w3w",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -115,7 +115,7 @@
       ],
       "metadata": {
         "id": "qikpFafHMZRp",
-        "outputId": "56d6ea94-347c-439a-e39a-bd6b4ce58374",
+        "outputId": "017712f7-b950-4585-c4fd-a759e72f2d86",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -128,7 +128,7 @@
           "text": [
             "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
             "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-            "100 80.2M  100 80.2M    0     0  15.6M      0  0:00:05  0:00:05 --:--:-- 19.5M\n"
+            "100 80.2M  100 80.2M    0     0  16.7M      0  0:00:04  0:00:04 --:--:-- 17.9M\n"
           ]
         },
         {
@@ -151,7 +151,7 @@
       ],
       "metadata": {
         "id": "1P--z8OhM6ub",
-        "outputId": "3ef2dcf0-e53c-40dd-d6a8-cb608c57d2bb",
+        "outputId": "d0335ec0-4b80-4d03-f7a1-8872bb9eb08d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -166,6 +166,29 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "let’s download the GloVe word embeddings."
+      ],
+      "metadata": {
+        "id": "u3jPbA4vb8Tr"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%shell\n",
+        "\n",
+        "wget http://nlp.stanford.edu/data/glove.6B.zip\n",
+        "unzip -q glove.6B.zip"
+      ],
+      "metadata": {
+        "id": "mik4B6eFb9d0"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -214,7 +237,7 @@
       "metadata": {
         "id": "YMuEAvy2OQRY"
       },
-      "execution_count": 4,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -240,12 +263,12 @@
       ],
       "metadata": {
         "id": "V6vA9z3ASbd3",
-        "outputId": "55b25e56-2e57-4eb0-bdf8-5ea999dabc22",
+        "outputId": "743d7443-98b0-441b-ac6e-a471f7b4865a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -281,12 +304,12 @@
       ],
       "metadata": {
         "id": "nwyYSSmCTHml",
-        "outputId": "38c3eb72-392e-4801-9627-1f5f1e8a20cc",
+        "outputId": "74a047b7-be19-4b61-dba9-ff0b153d7dbe",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -296,8 +319,8 @@
             "inputs.dtype: <dtype: 'string'>\n",
             "targets.shape: (32,)\n",
             "targets.dtype: <dtype: 'int32'>\n",
-            "inputs[0]: tf.Tensor(b\"... when this movie so well proves that they indeed are unnecessary.<br /><br />Although few lines, it was kind of weird to see this movie, no subs, in a language unknown. A friend of mine sent a VHS, included a few pieces of papers with all lines translated to English. with her translation next to me, I began watching this tale (it is indeed a tale), and from the very first tunes of the whistling melody during opening credits I was stuck. the colours, that minimal acting (well, in most cases), absurd comedy, slapstick, thoughtful, beautiful... along with a few other movies (Paris, Texas and Nenette et Boni), this one is able to speak to anyone's heart - without words. Whenever you get the chance, see it. Whatever you do - don't miss it. It's a once in a lifetime experience. Oh, acting is great, the soundtrack is brilliant, the story is simple and told a thousand times before - but rarely (never?) like this.\", shape=(), dtype=string)\n",
-            "targets[0]: tf.Tensor(1, shape=(), dtype=int32)\n"
+            "inputs[0]: tf.Tensor(b\"Not an altogether bad start for the program -- but what a slap in the face to real law enforcement. The worst part of the series is that it attempts to bill itself as reality fare -- and is anything but. Men and women that dedicate their lives to the enforcement of laws deserve better than this. What is next, medical school in a minute? Charo performing lipo? Charles Grodin assisting on a hip replacement? C'mon...show a little respect. Even the citizens of Muncie are outing the program as staged. Police Academy = High School Gym? Poor editing (how many times can they use the car-to-car shot of the Taco Bell in the background?), cheesy siren effects (the same loop added ad nauseum to every 'call' whether rolling code or not), and last, but not least -- more officer safety issues than you could shake a stick at.<br /><br />If I want to see manufactured police work and wise-ass fake cops, I would watch RENO 911.\", shape=(), dtype=string)\n",
+            "targets[0]: tf.Tensor(0, shape=(), dtype=int32)\n"
           ]
         }
       ]
@@ -1154,7 +1177,7 @@
       "metadata": {
         "id": "eKQRxZI9Qmk2"
       },
-      "execution_count": 7,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -1347,7 +1370,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1439,7 +1462,7 @@
       "metadata": {
         "id": "RW3kzSybffDn"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1454,7 +1477,7 @@
       "metadata": {
         "id": "jZlH-b8chsPd"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1470,7 +1493,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1524,7 +1547,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1591,10 +1614,209 @@
     {
       "cell_type": "markdown",
       "source": [
-        ""
+        "Sometimes you have so little training data available that you can’t use your data alone\n",
+        "to learn an appropriate task-specific embedding of your vocabulary. \n",
+        "\n",
+        "In such cases,\n",
+        "instead of learning word embeddings jointly with the problem you want to solve, you\n",
+        "can load embedding vectors from a precomputed embedding space that you know is\n",
+        "highly structured and exhibits useful properties—one that captures generic aspects of\n",
+        "language structure.\n",
+        "\n",
+        "Let’s use GloVe word embedding and parse the unzipped file (a .txt file) to build an index that maps words (as strings) to their vector representation."
       ],
       "metadata": {
         "id": "yzgkRUEpi2lm"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "path_to_glove_file = \"glove.6B.100d.txt\"\n",
+        "\n",
+        "embeddings_index = {}\n",
+        "with open(path_to_glove_file) as f:\n",
+        "  for line in f:\n",
+        "    word, coefs = line.split(maxsplit=1)\n",
+        "    coefs = np.fromstring(coefs, \"f\", sep=\" \")\n",
+        "    embeddings_index[word] = coefs\n",
+        "print(f\"Found {len(embeddings_index)} word vectors.\")"
+      ],
+      "metadata": {
+        "id": "BmcM3Y12crZD",
+        "outputId": "bfa569b5-9f21-4087-9147-cb12c9a9f18f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Found 400000 word vectors.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Next, let’s build an embedding matrix that you can load into an Embedding layer. \n",
+        "\n",
+        "It must be a matrix of shape `(max_words, embedding_dim)`, where each entry $i$ contains the `embedding_dim` - dimensional vector for the word of index $i$ in the reference word index (built during tokenization)."
+      ],
+      "metadata": {
+        "id": "F020b46bd13J"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "embedding_dim = 100\n",
+        "\n",
+        "# Retrieve the vocabulary indexed by our previous TextVectorization layer\n",
+        "vocabulary = text_vectorization.get_vocabulary()\n",
+        "# Use it to create a mapping from words to their index in the vocabulary.\n",
+        "word_index = dict(zip(vocabulary, range(len(vocabulary))))"
+      ],
+      "metadata": {
+        "id": "XcmggiT3eAz0"
+      },
+      "execution_count": 11,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Prepare a matrix that we’ll fill with the GloVe vectors.\n",
+        "embedding_matrix = np.zeros((max_tokens, embedding_dim))\n",
+        "\n",
+        "for word, i in word_index.items():\n",
+        "  # Fill entry i in the matrix with the word vector for index i. Words not found in the embedding index will be all zeros.\n",
+        "  if i < max_tokens:\n",
+        "    embedding_vector = embeddings_index.get(word)\n",
+        "  if embedding_vector is not None:\n",
+        "    embedding_matrix[i] = embedding_vector"
+      ],
+      "metadata": {
+        "id": "TCd6xDx4ee3S"
+      },
+      "execution_count": 12,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Finally, we use a Constant initializer to load the pretrained embeddings in an Embedding layer. \n",
+        "\n",
+        "So as not to disrupt the pretrained representations during training, we freeze\n",
+        "the layer via `trainable=False`:"
+      ],
+      "metadata": {
+        "id": "CzZAoDmQgQal"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "embedding_layer = layers.Embedding(max_tokens, embedding_dim, \n",
+        "                                   embeddings_initializer=keras.initializers.Constant(embedding_matrix),\n",
+        "                                   trainable=False, mask_zero=True)"
+      ],
+      "metadata": {
+        "id": "4k1vNrkEgXRR"
+      },
+      "execution_count": 13,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "We’re now ready to train a new model—identical to our previous model, but leveraging the `100-dimensional` pretrained GloVe embeddings instead of `128-dimensional` learned embeddings."
+      ],
+      "metadata": {
+        "id": "mHRV6Tfkg1_I"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# One input is a sequence of integers\n",
+        "inputs = keras.Input(shape=(None, ), dtype=\"int64\")\n",
+        "embedded = embedding_layer(inputs)\n",
+        "# add a bidirectional LSTM\n",
+        "x = layers.Bidirectional(layers.LSTM(32))(embedded)\n",
+        "x = layers.Dropout(0.5)(x)\n",
+        "outputs = layers.Dense(1, activation=\"sigmoid\")(x)\n",
+        "\n",
+        "model = keras.Model(inputs, outputs)\n",
+        "model.compile(optimizer=\"rmsprop\", loss=\"binary_crossentropy\", metrics=[\"accuracy\"])\n",
+        "model.summary()"
+      ],
+      "metadata": {
+        "id": "hxcMnAkug6RX",
+        "outputId": "b31d96e4-857a-42fb-85c7-2558ae3026d9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Model: \"model\"\n",
+            "_________________________________________________________________\n",
+            " Layer (type)                Output Shape              Param #   \n",
+            "=================================================================\n",
+            " input_1 (InputLayer)        [(None, None)]            0         \n",
+            "                                                                 \n",
+            " embedding (Embedding)       (None, None, 100)         2000000   \n",
+            "                                                                 \n",
+            " bidirectional (Bidirectiona  (None, 64)               34048     \n",
+            " l)                                                              \n",
+            "                                                                 \n",
+            " dropout (Dropout)           (None, 64)                0         \n",
+            "                                                                 \n",
+            " dense (Dense)               (None, 1)                 65        \n",
+            "                                                                 \n",
+            "=================================================================\n",
+            "Total params: 2,034,113\n",
+            "Trainable params: 34,113\n",
+            "Non-trainable params: 2,000,000\n",
+            "_________________________________________________________________\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "callbacks = [keras.callbacks.ModelCheckpoint(\"glove_embeddings_sequence_model.keras\", save_best_only=True)]\n",
+        "\n",
+        "model.fit(int_train_ds, validation_data=int_val_ds, epochs=1, callbacks=callbacks)\n",
+        "\n",
+        "model = keras.model.load_model(\"glove_embeddings_sequence_model.keras\")\n",
+        "print(f\"Test accuracy: {model.evaluate(int_test_ds)[1]:.3f}\")"
+      ],
+      "metadata": {
+        "id": "T-ogl15Qg_y9"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "You’ll find that on this particular task, pretrained embeddings aren’t very helpful, because the dataset contains enough samples that it is possible to learn a specialized enough embedding space from scratch. \n",
+        "\n",
+        "However, leveraging pretrained embeddings can be very helpful when you’re working with a smaller dataset."
+      ],
+      "metadata": {
+        "id": "t9fTBTPehn3v"
       }
     }
   ]
